p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3                    # Third application
spec:
  replicas: 1                   # Single replica for default backend
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3          # Name of the container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080

---

# ==================== SERVICE ====================
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  ports:
  - port: 8080
    targetPort: 8080
